--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <title>Mi primera pagina</title> 
  </head> 
  <body> 
- Hola mundo 
-  Soy Jorge Pimienta
+  <h1>Hola mundo </h1>
+  <h2>Soy Jorge Pimienta</h2>
  </body> 
  </html>
